--- a/project.yml
+++ b/project.yml
@@ -51,8 +51,8 @@ targets:
       - package: AuthenticationFeature
       
     scheme:
-      testPlan:
-        - AllTests
+      testTargets:
+        - KurlykTests
       gatherCoverageData: true
   
   # Tests for main app.
@@ -62,63 +62,3 @@ targets:
     sources: [Kurlyk/Tests]
     dependencies:
       - target: Kurlyk
-    
-    
-  # -- FEATURES --
-  
-  # Authentication Feature
-#  AuthenticationFeature:
-#    platform: iOS
-#    type: framework
-#    sources: [AuthenticationFeature/Sources]
-#    info:
-#      path: AuthenticationFeature/Sources/Framework/Info.plist
-#    dependencies:
-#      - package: ComponentsKit
-#
-#  AuthenticationFeatureTests:
-#    platform: iOS
-#    type: bundle.unit-test
-#    sources: [AuthenticationFeature/Tests]
-#    settings:
-#      base:
-#        SWIFT_OBJC_BRIDGING_HEADER: AuthenticationFeature/Tests/AuthenticationFeatureTests-Bridging-Header.h
-#    dependencies:
-#      - target: AuthenticationFeature
-
-      
-  # UI Components. Here you can find UI components which can be reused across multiple features.
-#  UIComponents:
-#    platform: iOS
-#    type: framework
-#    sources: [UIComponents/Sources]
-#    info:
-#      path: UIComponents/Sources/Framework/Info.plist
-#    dependencies:
-#      - target: Domain
-#      - package: ComposableArchitecture
-#      - package: DesignSystem
-
-
-  # Domain level. Here you can find domain models, abstract use cases and some useful tools.
-#  Domain:
-#    platform: iOS
-#    type: framework
-#    sources: [Domain/Sources]
-#    info:
-#      path: Domain/Sources/Framework/Info.plist
-#
-#  # Tests for Domain level.
-#  DomainTests:
-#    platform: iOS
-#    type: bundle.unit-test
-#    sources: [Domain/Tests]
-#    settings:
-#      base:
-#        SWIFT_OBJC_BRIDGING_HEADER: Domain/Tests/DomainTests-Bridging-Header.h
-#    dependencies:
-#      - target: Domain
-#      - framework: Carthage/Build/Nimble.xcframework
-#      - framework: Carthage/Build/Quick.xcframework
-    
-    
