--- a/Kurlyk/Sources/Application/Info.plist
+++ b/Kurlyk/Sources/Application/Info.plist
@@ -24,5 +24,7 @@
 	<string>1</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
